--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>adminCS</title>
+    <title>Example of gsc.map</title>
+    <link href="node_modules/openlayers/dist/ol.css" rel="stylesheet">
+    <script src="node_modules/openlayers/dist/ol.js"></script>
+
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+
+    <link href="styles/main.css" rel="stylesheet">
+
+    <link href="node_modules/gsc/dist/styles.css" rel="stylesheet">
+    <script src="node_modules/gsc/dist/gsc.js"></script>
 </head>
 <body>
 
+<div class="container">
+    <div id='map'></div>
+    <script src="src/app.js"></script>
+</div>
 </body>
 </html>
