--- a/index.html
+++ b/index.html
@@ -2,22 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <title>Example of gsc.map</title>
+
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
     <link href="node_modules/openlayers/dist/ol.css" rel="stylesheet">
-    <script src="node_modules/openlayers/dist/ol.js"></script>
+    <script src="node_modules/openlayers/dist/ol-debug.js"></script>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
+
+
+    <link href="deps/ol3-sidebar.min.css" rel="stylesheet">
+    <script src="deps/jquery-sidebar.min.js"></script>
+
+    <script src="node_modules/proj4/dist/proj4-src.js"></script>
 
     <link href="styles/main.css" rel="stylesheet">
 
     <link href="node_modules/gsc/dist/styles.css" rel="stylesheet">
     <script src="node_modules/gsc/dist/gsc.js"></script>
+
+    <link href="deps/ol3-sidebar.min.css" rel="stylesheet">
+    <script src="deps/jquery-sidebar.min.js"></script>
+
+    <script src="src/cs.js"></script>
 </head>
 <body>
 
-<div class="container">
-    <div id='map'></div>
+    <div id="sidebar" class="sidebar collapsed">
+
+        <div class="sidebar-tabs">
+            <ul role="tablist">
+                <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
+                <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
+                <li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+
+            <ul role="tablist">
+                <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
+            </ul>
+        </div>
+
+        <!-- Tab panes -->
+        <div class="sidebar-content">
+            <div class="sidebar-pane" id="home">
+                <h1 class="sidebar-header">
+                    sidebar-v2
+                    <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
+                </h1>
+            </div>
+
+            <div class="sidebar-pane" id="profile">
+                <h1 class="sidebar-header">Profile<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+            </div>
+
+            <div class="sidebar-pane" id="messages">
+                <h1 class="sidebar-header">Messages<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+            </div>
+        </div>
+    </div>
+
+    <div id='map' class="sidebar-map"></div>
+
     <script src="src/app.js"></script>
-</div>
 </body>
 </html>
