--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
 
-    <link href="deps/ol3-sidebar.min.css" rel="stylesheet">
-    <script src="deps/jquery-sidebar.min.js"></script>
+    <link href="deps/ol3-sidebar.css" rel="stylesheet">
+    <script src="deps/jquery-sidebar.js"></script>
 
     <script src="node_modules/proj4/dist/proj4-src.js"></script>
 
@@ -24,10 +26,9 @@
     <link href="node_modules/gsc/dist/styles.css" rel="stylesheet">
     <script src="node_modules/gsc/dist/gsc.js"></script>
 
-    <link href="deps/ol3-sidebar.min.css" rel="stylesheet">
-    <script src="deps/jquery-sidebar.min.js"></script>
-
     <script src="src/cs.js"></script>
+    <script src="src/datagrid.js"></script>
+    <script src="src/featureDetail.js"></script>
 </head>
 <body>
 
@@ -35,32 +36,42 @@
 
         <div class="sidebar-tabs">
             <ul role="tablist">
-                <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-                <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
-                <li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
-            </ul>
-
-            <ul role="tablist">
-                <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
+                <li><a href="#filterForm" role="tab"><i class="fa fa-filter"></i></a></li>
+                <li><a href="#datagrid" role="tab"><i class="fa fa-table"></i></a></li>
+                <li><a href="#featureDetail" role="tab"><i class="fa fa-map-marker"></i></a></li>
             </ul>
         </div>
 
         <!-- Tab panes -->
         <div class="sidebar-content">
-            <div class="sidebar-pane" id="home">
+            <div class="sidebar-pane" id="filterForm">
                 <h1 class="sidebar-header">
-                    sidebar-v2
+                    Filter form
                     <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
                 </h1>
+
+                <form action="action_page.php">
+                    <fieldset>
+                        <legend>Personal information:</legend>
+                        First name:<br>
+                        <input type="text" name="firstname" value="Mickey"><br>
+                        Last name:<br>
+                        <input type="text" name="lastname" value="Mouse"><br><br>
+                        <input type="submit" value="Submit">
+                    </fieldset>
+                </form>
+
+
             </div>
 
-            <div class="sidebar-pane" id="profile">
-                <h1 class="sidebar-header">Profile<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+            <div class="sidebar-pane" id="datagrid"></div>
+
+            <div class="sidebar-pane" id="featureDetail">
+
+                no features selected
+
             </div>
 
-            <div class="sidebar-pane" id="messages">
-                <h1 class="sidebar-header">Messages<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
-            </div>
         </div>
     </div>
 
