add datatype functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="deps/jquery-sidebar.js"></script>
 
     <script src="node_modules/proj4/dist/proj4-src.js"></script>
+    <script src="deps/date.js"></script>
+
 
     <link href="styles/main.css" rel="stylesheet">
 
@@ -29,6 +31,7 @@
     <script src="src/cs.js"></script>
     <script src="src/datagrid.js"></script>
     <script src="src/featureDetail.js"></script>
+    <script src="src/datatype.js"></script>
 </head>
 <body>
 
