update popup, new datatype, licence, many feature click functionality

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
 
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link href="node_modules/openlayers/dist/ol.css" rel="stylesheet">
     <script src="node_modules/openlayers/dist/ol-debug.js"></script>
 
 
 
-    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.11/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
+    <!-- https://datatables.net/download/npm -->
+    <link rel="stylesheet" type="text/css" href="node_modules/datatables.net-dt/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="node_modules/datatables.net/js/jquery.dataTables.js"></script>
 
     <link href="deps/ol3-sidebar.css" rel="stylesheet">
     <script src="deps/jquery-sidebar.js"></script>
