add user auth system

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="src/featureDetail.js"></script>
     <script src="src/datatype.js"></script>
     <script src="src/filterform.js"></script>
+    <script src="src/user.js"></script>
 </head>
 <body>
 
@@ -66,16 +67,7 @@
                 <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
 
-            <form class="cs-userprofile-form" action="#">
-                <fieldset>
-                    <legend>Login:</legend>
-                    Username or email:<br>
-                    <input type="text" name="username" value="Mickey"><br>
-                    Password:<br>
-                    <input type="password" name="pass" value=""><br><br>
-                    <input type="submit" value="Submit">
-                </fieldset>
-            </form>
+            <div id='userSection'></div>
         </div>
 
 
