--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" type="text/css" href="node_modules/datatables.net-dt/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="node_modules/datatables.net/js/jquery.dataTables.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="deps/jquery-ui.min.css">
+    <script type="text/javascript" charset="utf8" src="deps/jquery-ui.min.js"></script>
+
     <link href="deps/ol3-sidebar.css" rel="stylesheet">
     <script src="deps/jquery-sidebar.js"></script>
 
@@ -74,7 +77,7 @@
         <!-- FILTER -->
         <div class="sidebar-pane" id="filter">
             <h1 class="sidebar-header">
-                Filter form
+                Filter
                 <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
             <div id="filterWrapper"></div>
@@ -83,10 +86,12 @@
 
         <!-- DATAGRID -->
         <div class="sidebar-pane" id="datagrid">
-            <h1 class="sidebar-header dg">
+            <h1 class="sidebar-header">
                 Events
+                <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
             <div id="datagridContent"></div>
+
         </div>
 
         <!-- FEATURE DETAIL -->
@@ -102,6 +107,7 @@
         </div>
 
     </div>
+
 </div>
 
 <div id='map' class="sidebar-map"> <div id="popup"></div> </div>
