--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
     <link href="node_modules/gsc/dist/gsc.css" rel="stylesheet">
     <script src="node_modules/gsc/dist/gsc.js"></script>
 
+
     <script src="src/cs.js"></script>
+    <script src="src/feature.js"></script>
     <script src="src/datagrid.js"></script>
     <script src="src/featureDetail.js"></script>
     <script src="src/datatype.js"></script>
+    <script src="src/datatypes/comment.js"></script>
     <script src="src/filterform.js"></script>
     <script src="src/user.js"></script>
 </head>
@@ -97,12 +100,11 @@
         <!-- FEATURE DETAIL -->
         <div class="sidebar-pane" id="featureDetail">
             <h1 class="sidebar-header" >
-                <span class="cs-featuredetail-edit-button"><i class="fa fa-edit"></i></span>
                 Event detail
                 <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
             <div id="featureDetailContent">
-                <h3>No feature selected!</h3>
+                <p class="cs-featureDetail-noSelected"><i class="fa fa-meh-o" aria-hidden="true"></i> No feature selected!</p>
             </div>
         </div>
 
