update new schema

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- FEATURE DETAIL -->
         <div class="sidebar-pane" id="featureDetail">
             <h1 class="sidebar-header" >
-                Event detail
+                <span class="sidebar-header-text">Detail</span>
                 <span class="sidebar-close"><i class="fa fa-caret-left"></i></span>
             </h1>
             <div id="featureDetailContent">
